@@ -256,3 +256,4 @@ Revision	Version Updated		Log Message
 235		C++			Culture mapping changes: give Sami, Ukrainian, Ugrian, Pashtun, Baluchi, and Malagasy correct mappings; move Papuan from Polynesian to Melanesian.
 236		C++			Add starting factories.
 237		C++			Apply diminishing-returns scaling to manufactory bonus for starting factories.
+238		C++			Convert starting financials (treasury, loans, etc)
